# lib/db/src/schema/company.ts
@@ -10,8 +10,9 @@ export const companyTable = pgTable("company", {
   monthlyAverageWorkHours: doublePrecision("monthly_average_work_hours").notNull().default(160),
   socialInsuranceRate: doublePrecision("social_insurance_rate").notNull().default(0.1495),
   employmentInsuranceRate: doublePrecision("employment_insurance_rate").notNull().default(0.006),
-  healthInsuranceEmployeeRate: doublePrecision("health_insurance_employee_rate").notNull().default(0.0500),
-  healthInsuranceEmployerRate: doublePrecision("health_insurance_employer_rate").notNull().default(0.0500),
+  healthInsuranceEmployeeRate: doublePrecision("health_insurance_employee_rate").notNull().default(0.04925),
+  healthInsuranceEmployerRate: doublePrecision("health_insurance_employer_rate").notNull().default(0.04925),
+  careInsuranceRate: doublePrecision("care_insurance_rate").notNull().default(0.0091),
   pensionEmployeeRate: doublePrecision("pension_employee_rate").notNull().default(0.0915),
   pensionEmployerRate: doublePrecision("pension_employer_rate").notNull().default(0.0915),
   employmentInsuranceEmployerRate: doublePrecision("employment_insurance_employer_rate").notNull().default(0.0085),
